Historical, CurrentQuote, LineGraph, LineGraphCaption: fixed overlap of LineGraph and LineGraphCaption, reduced padding on text

--- a/src/components/DataDisplay/CurrentQuote.css
+++ b/src/components/DataDisplay/CurrentQuote.css
@@ -1,7 +1,7 @@
 .CurrentQuote {
   width: 95%;
   margin: 24px auto 0px;
-  padding: 24px 12px;
+  padding: 24px 8px;
   border: 1px solid #666;
 }
 
